--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,5 +21,24 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:text="Mountains Around Me"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimary"
         android:onClick="nearYou"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        android:text="All Mountains"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimary"
+        android:onClick="allMountains"
+        android:layout_below="@+id/button"
+        android:layout_marginTop="49dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+    />
+
 </RelativeLayout>
